# robot_localization_wrapper

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/robot_localization/: ArucoLocalization.hpp  CameraLocalizationNode.hpp  FramePathPublisher.hpp
launch/: camera_localization.launch.py
robot_localization_wrapper/: CMakeLists.txt  package.xml
robot_localization_wrapper/include/robot_localization_wrapper/: CameraLocalizationNode.hpp  FramePathPublisher.hpp  InitialTransformBroadcaster.hpp
robot_localization_wrapper/launch/: camera_localization.launch.py  initial_transform_broadcaster.launch.py
robot_localization_wrapper/src/: CameraLocalizationNode.cpp  FramePathPublisher.cpp  InitialTransformBroadcaster.cpp  camera_localization_node.cpp  frame_path_publisher.cpp  initial_transform_broadcaster.cpp
src/: ArucoLocalization.cpp  CameraLocalizationNode.cpp  FramePathPublisher.cpp  camera_localization_node.cpp  frame_path_publisher.cpp
